src/main/java/com/example/fresher_manager/exception/error/ResourceNotFoundException.java
package com.example.fresher_manager.exception.error;

public class ResourceNotFoundException extends RuntimeException{
    public ResourceNotFoundException(String message) {
        super(message);
    }

    public ResourceNotFoundException(String message, Throwable cause) {
        super(message, cause);
    }
}
